iac/modules/airbyte/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airbyte-ingress
  namespace: airbyte
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: airbyte.werockstar.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airbyte-airbyte-webapp-svc
                port:
                  number: 80
